--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   },
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.535.0",
     "next": "15.4.4",
     "next-auth": "^5.0.0-beta.29",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1",
     "zod": "^4.0.14"
   },
   "devDependencies": {
@@ -32,6 +37,7 @@
     "prisma": "^6.12.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.3",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
