Create all pages (from test repo)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
     "**/*.css",
     "prisma/**",
     "tsconfig.json"
-  ]
+  ],
+  "cSpell.words": [
+    "isbn"
+  ],
+  "WillLuke.nextjs.addTypesOnSave": true,
+  "WillLuke.nextjs.hasPrompted": true
 }
